airflow/logs/dag_id=dynamic_metadata_pipeline/run_id=manual__2026-06-03T125711.809031+0000/task_id=run_pipeline_2/attempt=2.log
[2026-06-03T13:02:31.164+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-03T13:02:31.209+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_2 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T13:02:31.219+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_2 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T13:02:31.220+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2026-06-03T13:02:31.237+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_2> on 2026-06-03 12:57:11.809031+00:00
[2026-06-03T13:02:31.248+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dynamic_metadata_pipeline', 'run_pipeline_2', 'manual__2026-06-03T12:57:11.809031+00:00', '--job-id', '141', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_dag.py', '--cfg-path', '/tmp/tmpf36_5rv5']
[2026-06-03T13:02:31.252+0000] {standard_task_runner.py:91} INFO - Job 141: Subtask run_pipeline_2
[2026-06-03T13:02:31.252+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2250) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-03T13:02:31.253+0000] {standard_task_runner.py:63} INFO - Started process 2252 to run task
[2026-06-03T13:02:31.301+0000] {task_command.py:426} INFO - Running <TaskInstance: dynamic_metadata_pipeline.run_pipeline_2 manual__2026-06-03T12:57:11.809031+00:00 [running]> on host c3bf940c8326
[2026-06-03T13:02:31.399+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='dynamic_metadata_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_2' AIRFLOW_CTX_EXECUTION_DATE='2026-06-03T12:57:11.809031+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-06-03T12:57:11.809031+00:00'
[2026-06-03T13:02:31.400+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-03T13:02:31.420+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-03T13:02:31.422+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 2']
[2026-06-03T13:02:31.430+0000] {subprocess.py:86} INFO - Output:
[2026-06-03T13:02:41.646+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:41.649+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:41.652+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:02:41.653+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:41.655+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:02:41.657+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:02:41.658+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:02:41.660+0000] {subprocess.py:93} INFO - DATABASE  : metadata_db
[2026-06-03T13:02:41.661+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:02:41.663+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:41.664+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:41.665+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:02:41.666+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:41.667+0000] {subprocess.py:93} INFO - Running pipeline: postgres_to_local_pipeline (db_to_storage)
[2026-06-03T13:02:41.668+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:41.669+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:41.670+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:02:41.671+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:41.672+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:02:41.673+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:02:41.673+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:02:41.674+0000] {subprocess.py:93} INFO - DATABASE  : udifdb
[2026-06-03T13:02:41.674+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:02:41.675+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:41.675+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:41.676+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:02:41.676+0000] {subprocess.py:93} INFO - Completed: 4653 rows processed
[2026-06-03T13:02:41.677+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:02:41.677+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 72, in main
[2026-06-03T13:02:41.678+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:02:41.678+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:02:41.679+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:02:41.679+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:02:41.679+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:02:41.680+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:02:41.680+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:41.680+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:41.681+0000] {subprocess.py:93} INFO - During handling of the above exception, another exception occurred:
[2026-06-03T13:02:41.681+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:41.682+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:02:41.682+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 111, in <module>
[2026-06-03T13:02:41.682+0000] {subprocess.py:93} INFO -     main()
[2026-06-03T13:02:41.683+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 95, in main
[2026-06-03T13:02:41.683+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:02:41.683+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:02:41.684+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:02:41.684+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:02:41.684+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:02:41.685+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:02:41.685+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:41.858+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-03T13:02:41.859+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-03T13:02:41.870+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-03T13:02:41.875+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=dynamic_metadata_pipeline, task_id=run_pipeline_2, run_id=manual__2026-06-03T12:57:11.809031+00:00, execution_date=20260603T125711, start_date=20260603T130231, end_date=20260603T130241
[2026-06-03T13:02:41.890+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 141 for task run_pipeline_2 (Bash command failed. The command returned a non-zero exit code 1.; 2252)
[2026-06-03T13:02:41.925+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-03T13:02:41.942+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-03T13:02:41.945+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
